--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,4 +1,10 @@
 {
+  "common":{
+    "locale":{
+      "en":"English",
+      "ja": "日本語"
+    }
+  },
   "metadata": {
     "Title": "Umut Karakulak のポートフォリオ: Web開発と機械学習",
     "Description": "革新的で最先端のテクノロジーを実験することに情熱を持っている人。 現在はフルスタック開発者として働いており、機械学習に携わっています。ポートフォリオをご覧になり、お気軽にご連絡してください。"
