refactor: small i18n updates

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -59,7 +59,7 @@
       "DUNKSOFT Co.,Ltd": "Dunksoft Co.,Ltd",
       "Full Stack Engineer": "Full Stack Engineer",
       "Present": "Present",
-      "Dunksoft full stack work description": "Development lead and management of WeARee! an innovative community creation platform for everyone.",
+      "Dunksoft full stack work description": "Development lead and management of WeARee! a community creation platform for everyone.",
       "Data Scientist": "Data Scientist",
       "Dunksoft data science work description": "Research, data analysis, preparation and realization of in-house machine learning models and API's on a variety of problem domains.",
       "obase": "obase",
