feat: add japanese cv

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,7 +19,8 @@
       "Title": "Web Development & Machine Learning",
       "Description": "  Someone who is passionate about experimenting with innovative, state of the art technologies. Currently working as a full-stack developer with a touch of machine learning for good measure.",
       "Say hello!": "👋 Say hello!",
-      "Download CV": "Download CV"
+      "Download CV": "Download CV",
+      "CV file": "umut_karakulak-resume_en.pdf"
     },
     "Skills": "Skills",
     "skills": {
