refactor: remove emoji on about title

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,7 +22,7 @@
       "Download CV": "Download CV",
       "CV file": "umut_karakulak-resume_en.pdf"
     },
-    "About": "About Me 🧑‍💻",
+    "About": "About Me",
     "Languages": "Languages",
     "languages": {
       "Turkish": "Turkish (Native)",
