feat: add wevnal to work history

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -58,6 +58,9 @@
     },
     "Work": "Work History",
     "work": {
+      "Wevnal Co.,Ltd": "Wevnal Co.,Ltd",
+      "Senior Specialist": "Senior Specialist",
+      "Wevnal senior specialist work description": "Working as a Senior Specialist on the BX platform BOTCHAN at Wevnal Co., Ltd",
       "DUNKSOFT Co.,Ltd": "Dunksoft Co.,Ltd",
       "Full Stack Engineer": "Full Stack Engineer",
       "Present": "Present",
