--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -58,6 +58,9 @@
     },
     "Work": "職歴",
     "work": {
+      "Wevnal Co.,Ltd": "株式会社wevnal",
+      "Senior Specialist": "シニアスペシャリスト",
+      "Wevnal senior specialist work description": "株式会社wevnalでBXプラットフォームBOTCHANのシニアスペシャリスト",
       "DUNKSOFT Co.,Ltd": "株式会社ダンクソフト",
       "Full Stack Engineer": "フルスタックエンジニア",
       "Present": "現在",
