refactor: rename programming skills section to skills

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,7 +29,7 @@
       "English": "English (Professional)",
       "Japanese": "Japanese (Conversational)"
     },
-    "Skills": "Programming Skills",
+    "Skills": "Skills",
     "skills": {
       "Python": "Python",
       "SQL": "SQL",
