feat: add a new tool section, update skills

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,30 +31,46 @@
     },
     "Skills": "Skills",
     "skills": {
-      "Python": "Python",
       "SQL": "SQL",
       "Javascript": "Javascript",
       "Typescript": "Typescript",
-      "Node.js": "Node.js",
       "Next.js": "Next.js",
       "React": "React",
+      "tRPC": "tRPC",
+      "Node.js": "Node.js",
+      "NestJS": "NestJS",
+      "Python": "Python",
+      "FastAPI": "FastAPI",
+      "Azure": "Azure",
       "AWS": "AWS",
-      "Django": "Django",
-      "Flask": "Flask",
+      "Docker": "Docker",
+      "Tailwind CSS": "Tailwind CSS",
+      "Pandas": "Pandas",
+      "NumPy": "NumPy",
+      "Tensorflow": "Tensorflow",
+      "Machine Learning": "Machine Learning",
       "Computer Vision": "Computer Vision",
       "NLP": "NLP",
-      "Machine Learning": "Machine Learning",
       "AR / VR": "AR / VR",
-      "NumPy": "NumPy",
-      "Pandas": "Pandas",
-      "Tensorflow": "Tensorflow",
-      "Keras": "Keras",
-      "Data Visualization": "Data Visualization",
-      "Linux": "Linux",
-      "Git": "Git",
-      "Web Design": "Web Design",
       "HTML": "HTML",
       "CSS": "CSS"
+    },
+    "Tools": "Tools & Services",
+    "tools": {
+      "Git": "Git",
+      "Linux": "Linux",
+      "NewRelic": "NewRelic",
+      "Sentry": "Sentry",
+      "Claude Code": "Claude Code",
+      "Devin": "Devin",
+      "OpenSpec": "OpenSpec",
+      "Vercel": "Vercel",
+      "WorkOS": "WorkOS",
+      "Twilio": "Twilio",
+      "Notion": "Notion",
+      "Jira": "Jira",
+      "PagerDuty": "PagerDuty",
+      "GTM": "GTM"
     },
     "Work": "Work History",
     "work": {
