fix: missing translation for freelance responsibilities

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -98,7 +98,7 @@
       "Freelance": "フリーランス",
       "Software Developer": "ソフトウェア開発者",
       "Freelance work description": "断続的に、Microsoft Turkey を含むさまざまな企業でフリーランサーとして働いていました。 主に.NET Frameworkを使用したWindowsアプリケーションの開発を行っています。",
-      "Freelance responsibilities": "requirement definition, 開発, デザイン, ビジネス関係"
+      "Freelance responsibilities": "要件定義, 開発, デザイン, ビジネス関係"
     },
     "Education": "学歴",
     "education": {
